syntax = "proto3";

package genproto;

option go_package="genproto/notification_service";

import "google/protobuf/empty.proto";

service NotificationService {
    rpc SendEmail(SendEmailRequest) returns (google.protobuf.Empty) {}
}

message SendEmailRequest {
    string to = 1;
    string type = 2;
    string subject = 3;
    map<string, string> body = 4;
}
